# AIEDN

./: .gitignore  aiedn_page.py  build_transcript_library.py  main.py  pyproject.toml  semantha.py  whisper_dj.py
ids/: generate_group_ids.ipynb  ids.json  ids2.json  provided_ids.json
page_views/: abstract_page.py  entry_page.py  page_manager.py  search_page.py  sidebar.py  video_page.py
