[tool.poetry]
name = "semantha-streamlit-math"
version = "0.1.0"
description = ""
authors = ["Niko Dürr <niko@semantha.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
semantha_sdk = "4.5.0"
streamlit= "1.14.0"
tqdm = "^4.64.1"
openpyxl = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
